# ha-escpos-thermal-printer

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.json  .safety-project.ini  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  hacs.json  info.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-config-flow.yml  bug-image.yml  bug-transport.yml  config.yml
.github/opengrep/: escpos.yml
.github/semgrep/: escpos.yml
.github/workflows/: codeql.yml  dependabot-auto-sync.yml  hacs.yml  hassfest.yml  release.yml  security.yml  validate.yml
blueprints/: AUTHORING.md  GUEST_WIFI_QR.md  README.md  UNIFI_GUEST_WIFI.md
blueprints/automation/escpos_printer/: daily_agenda.yaml  doorbell_snapshot.yaml  morning_briefing.yaml  sensor_alert.yaml  todo_item.yaml  todo_ticket.yaml  trash_reminder.yaml
blueprints/script/escpos_printer/: guest_wifi_qr.yaml  receipt.yaml  recipe_card.yaml  shopping_list.yaml  todo_list.yaml  weather_forecast.yaml
custom_components/escpos_printer/: __init__.py  binary_sensor.py  bluez.py  capabilities.py  config_flow.py  const.py  diagnostics.py  icons.json  image_sources.py  manifest.json  notify.py  printer.py  quality_scale.yaml  security.py  sensor.py  services.py  services.yaml  strings.json  text_utils.py
custom_components/escpos_printer/_config_flow/: __init__.py  bluetooth_helpers.py  bluetooth_steps.py  cups_steps.py  entry_helpers.py  import_steps.py  main_flow.py  network_helpers.py  network_steps.py  options_flow.py  serial_helpers.py  serial_steps.py  settings_steps.py  usb_helpers.py  usb_steps.py
custom_components/escpos_printer/capabilities/: __init__.py  codepages.py  constants.py  features.py  line_widths.py  loader.py  profiles.py
custom_components/escpos_printer/config_flow/: main_flow.py  usb_helpers.py
custom_components/escpos_printer/device_action/: __init__.py  actions.py  capabilities.py  constants.py  schemas.py
custom_components/escpos_printer/printer/: __init__.py  _escpos_bluetooth.py  _escpos_serial.py  _host.py  barcode_operations.py  base_adapter.py  bluetooth_adapter.py  bluetooth_transport.py  config.py  control_operations.py  cups_adapter.py  factory.py  image_operations.py  image_processor.py  mapping_utils.py  network_adapter.py  print_operations.py  serial_adapter.py  serial_transport.py  svg_renderer.py  usb_adapter.py
custom_components/escpos_printer/services/: __init__.py  _handler_utils.py  control_handlers.py  print_handlers.py  registration.py  schemas.py  target_resolution.py
custom_components/escpos_printer/text_effects/: __init__.py  borders.py  box.py  font_render.py  table.py  width.py
custom_components/escpos_printer/text_utils/: __init__.py  accent_fallback_map.py  codepage_mapping.py  lookalike_map.py  transcoding.py
custom_components/escpos_printer/translations/: en.json
docs/: CONFIGURATION.md  EXAMPLES.md  TROUBLESHOOTING.md  automations.md  bluetooth.md  configuration.md  images.md  installation.md  limitations.md  multi-printer.md  network.md  notifications.md  serial.md  services.md  text-effects.md  troubleshooting.md  usb.md
examples/: README.md  test_printer_script.yaml
scripts/: check_requirements_sync.py  check_version_sync.py  extract_markdown_bash.py  framework_smoke_test.py  md_fix.py  security_scan.py  sync_manifest_requirements.py  test_network_printer.py  validate_blueprints.py
tests/: __init__.py  conftest.py  test_adapter_additional_paths.py  test_adapter_lifecycle.py  test_adapter_profile_roundtrip.py  test_barcode_force_software.py  test_blueprints_template_safety.py  test_blueprints_yaml.py  test_bluetooth_adapter.py  test_bluetooth_battery_sensor.py  test_capabilities.py  test_config_flow.py  test_config_flow_bluetooth.py  test_config_flow_cups.py  test_config_flow_negative.py  test_config_flow_options_and_duplicate.py  test_config_flow_serial.py  test_config_flow_usb.py  test_config_flow_usb_enumerate.py  test_control_operations_fallbacks.py  test_cups_adapter.py  test_device_action_capabilities.py  test_device_actions.py  test_diagnostics.py  test_image_chunking.py  test_image_decode_errors.py  test_image_processor.py  test_image_sources.py  test_image_sources_pinned_session.py  test_init.py  test_manifest_usb_vids.py  test_mapping_utils.py  test_markdown_bash.py  test_migration_v3.py  test_new_image_services.py  test_newline_handling.py  test_notify.py  test_notify_image.py  test_notify_negative.py  test_optional_services_and_errors.py  (+24 more)
tests/integration_tests/: README.md  __init__.py  conftest.py  escpos_test_plan_summary.md  implementation_approach.md  integration_edge_cases_test_design.md  network_resilience_test_design.md  performance_test_design.md
tests/integration_tests/emulator/: __init__.py  command_parser.py  error_simulator.py  printer_state.py  virtual_printer.py
tests/integration_tests/examples/: basic_usage_example.py
tests/integration_tests/fixtures/: __init__.py  conftest.py  mock_data_generator.py  verification_utils.py
tests/integration_tests/ha_environment/: __init__.py  ha_test_environment.py
tests/integration_tests/scenarios/: test_advanced_services.py  test_automation_integration.py  test_basic_functionality.py  test_bluetooth_functionality.py  test_edge_cases.py  test_error_handling.py  test_network_resilience.py  test_performance.py
tests/text_effects/: conftest.py  test_borders.py  test_box.py  test_font_render.py  test_table.py  test_width.py
